# lab51

./: .travis.yml  CMakeLists.txt  README.md
include/: boostf.hpp  main.hpp  main2.hpp  student.h  table.h
sources/: boostf.cpp  main.cpp  student.cpp  table.cpp
tests/: json_test.cpp  test.cpp
